<resources>
    <string name="app_name">JoinSport</string>

    <!-- Permission -->
    <string name="permission_location">Please enable the use of location permission.</string>
    <string name="permission_camera_storage">Please enable the use of cameras and personal files.</string>
    <string name="permission_call_phone">Please enable the use of call permission.</string>
    <string name="permission_setting">Setting</string>


    <!-- Dialog Screen -->
    <string name="txt_button_okey" translatable="false">OK</string>
    <string name="txt_button_cancel" translatable="false">Cancel</string>
    <string name="txt_button_camera" translatable="false">Camera</string>
    <string name="txt_button_gallery" translatable="false">Gallery</string>
    <string name="imageClose" translatable="false">imageClose</string>
    <string name="location_m" translatable="false">M.</string>
    <string name="location_mm" translatable="false">MM.</string>
    <string name="location_km" translatable="false">KM.</string>
    <string name="input_password" translatable="false">Password</string>
    <string name="input_username" translatable="false">Username</string>
    <string name="message_login" translatable="false">เข้าสู่ระบบ</string>
    <string name="message_alert_dialog" translatable="false">Message</string>
    <string name="message_done" translatable="false">Done</string>
    <string name="message_register" translatable="false"><u>ลงทะเบียน</u></string>
    <string name="message_register2" translatable="false">ลงทะเบียน</string>
    <string name="message_input_email" translatable="false">อีเมล</string>
    <string name="message_input_fullname" translatable="false">full name</string>
    <string name="message_password" translatable="false">รหัสผ่าน</string>
    <string name="message_confirm_password" translatable="false">ยืนยันรหัสผ่าน</string>

    <!--    set number format-->
    <string name="format_number" translatable="false">%,.0f</string>
    <string name="format_bath" translatable="false"><b>%,.0f</b> บาท</string>
    <string name="format_list" translatable="false">%s รายการ</string>
    <string name="message_username">ชื่อผู้ใช้</string>
    <string name="message_welcome">ยินดีต้อนรับ</string>
    <string name="message_title_register">ยังไม่มีบัญชีใช่หรือไม่?</string>
    <string name="message_first_name">ชื่อ - นามสกุล</string>
    <string name="message_number_phone">เบอร์โทรศัพท์</string>
    <string name="message_status">สถานะเข้าสู่ระบบ</string>
    <string name="message_select_status">กรุณาเลือกสถานะ</string>
    <string name="message_address">ที่อยู่ (ที่ติดต่อได้)</string>
    <string name="message_id_card_number">เลขบัตรประชาชน</string>
    <string name="message_select">เลือก</string>
    <string name="title_activity_main_u_i">MainActivity</string>
    <string name="title_home">หน้าหลัก</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity">กิจกรรม</string>
    <string name="title_menu">เมนู</string>
    <string name="message_post">โพสต์ข่าวสาร</string>
    <string name="message_like">ถูกใจ</string>
    <string name="message_comment">แสดงความคิดเห็น</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
