<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="title"
            type="String" />
        <variable
            name="text"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_size_large"
        android:layout_marginStart="@dimen/margin_padding_size_large"
        android:background="@drawable/custom_dialog_background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/d12dp"
            android:paddingRight="@dimen/d12dp"
            android:paddingBottom="@dimen/d20dp"
            android:layout_marginTop="@dimen/d15dp"
            android:text="@string/app_name"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/text_size_20dp"
            android:fontFamily="@font/font_sv_set_semibold"
            tools:ignore="RelativeOverlap" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/lineColorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/margin_padding_size_small"
                android:text="@string/txt_button_cancel"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/text_size_15dp"
                android:fontFamily="@font/font_sv_set_semibold"
                tools:ignore="RelativeOverlap" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@color/lineColorGray" />

            <TextView
                android:id="@+id/tv_okey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_padding_size_small"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_button_okey"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/text_size_15dp"
                android:fontFamily="@font/font_sv_set_semibold"
                tools:ignore="RelativeOverlap" />

        </LinearLayout>

    </LinearLayout>

</layout>