<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.wewillapp.masterproject.view.register.RegisterViewModel" />

        <import type="android.view.View" />

        <import type="android.graphics.drawable.Drawable" />

        <import type="com.wewillapp.masterproject.vo.Resource" />

        <import type="com.wewillapp.masterproject.vo.enumClass.Status" />

        <variable
            name="loadResource"
            type="com.wewillapp.masterproject.vo.Resource" />

        <variable
            name="dataViewModel"
            type="com.wewillapp.masterproject.view.register.RegisterViewModel" />

        <variable
            name="toolbarViewModel"
            type="com.wewillapp.masterproject.view.base.ToolbarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <include
            android:id="@+id/icView"
            layout="@layout/custom_toolbar_view"
            app:toolbarViewModel="@{toolbarViewModel}" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rlContentLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="@dimen/d120dp"
                    android:layout_height="@dimen/d120dp"
                    android:layout_marginTop="@dimen/d20dp"
                    android:onClick="@{()->dataViewModel.onClickEventAddImage()}"
                    android:src="@drawable/ic_user_image_with_black_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:translationY="-25dp"
                    android:onClick="@{()->dataViewModel.onClickEventAddImage()}"
                    android:background="@drawable/custom_bg_btn_oval"
                    app:layout_constraintEnd_toEndOf="@+id/ivProfile"
                    app:layout_constraintStart_toStartOf="@+id/ivProfile"
                    app:layout_constraintTop_toBottomOf="@+id/ivProfile">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/d30dp"
                        android:layout_height="@dimen/d30dp"
                        android:layout_marginStart="@dimen/d10dp"
                        android:layout_marginTop="@dimen/d10dp"
                        android:layout_marginEnd="@dimen/d10dp"
                        android:layout_marginBottom="@dimen/d10dp"
                        android:src="@drawable/ic_camera"
                        android:tint="@color/color_1_white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d50dp"
                    android:layout_marginTop="@dimen/d30dp"
                    android:layout_marginEnd="@dimen/d50dp"
                    android:addTextChangedListener="@{dataViewModel.onEmailTextChanged}"
                    android:backgroundTint="@color/textColorGray"
                    android:fontFamily="@font/font_sv_set_light"
                    android:hint="@string/message_input_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@{dataViewModel.etEmail}"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/text_size_15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivProfile" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d50dp"
                    android:layout_marginTop="@dimen/d10dp"
                    android:layout_marginEnd="@dimen/d50dp"
                    android:addTextChangedListener="@{dataViewModel.onFullNameTextChanged}"
                    android:backgroundTint="@color/textColorGray"
                    android:fontFamily="@font/font_sv_set_light"
                    android:hint="@string/message_input_fullname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@{dataViewModel.etFullName}"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/text_size_15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etCurrentPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d50dp"
                    android:layout_marginTop="@dimen/d10dp"
                    android:layout_marginEnd="@dimen/d50dp"
                    android:addTextChangedListener="@{dataViewModel.onPasswordTextChanged}"
                    android:backgroundTint="@color/textColorGray"
                    android:fontFamily="@font/font_sv_set_light"
                    android:hint="@string/message_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text="@{dataViewModel.etPassword}"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/text_size_15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etFullName" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d50dp"
                    android:layout_marginTop="@dimen/d10dp"
                    android:layout_marginEnd="@dimen/d50dp"
                    android:addTextChangedListener="@{dataViewModel.onConfirmPasswordTextChanged}"
                    android:backgroundTint="@color/textColorGray"
                    android:fontFamily="@font/font_sv_set_light"
                    android:hint="@string/message_confirm_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text="@{dataViewModel.etConfirmPass}"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/text_size_15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCurrentPass" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d50dp"
                    android:layout_marginTop="@dimen/d30dp"
                    android:layout_marginEnd="@dimen/d50dp"
                    android:background="@drawable/bg_btn_login"
                    android:baselineAligned="false"
                    android:enabled="@{dataViewModel.isStatusButtonClick()}"
                    android:fontFamily="@font/font_sv_set_bold"
                    android:onClick="@{()-> dataViewModel.onClickEventRegister()}"
                    android:text="@string/message_register"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorWhite"
                    android:textSize="@dimen/text_size_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNewPass" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>